# StreamerStalkerQt

./: .gitignore  CMakeLists.txt  README.md
res/: Streamer.qml  main.qml  qml.qrc  streamers.json  twitch_auth.example.json
src/: Functional.hh  IUpdater.hh  ShortLambda.hh  Stalker.cc  Stalker.hh  Streamer.cc  Streamer.hh  TwitchUpdater.cc  TwitchUpdater.hh  main.cc
